2008-02-26  John (J5) Palmieri  <johnp@redhat.com>

	* correctly unref connections without guids during shutdown
	* dbus/dbus-connection.c (close_connection_on_shutdown): new method
	  split out from shared_connections_shutdown
	  (shared_connections_shutdown): shutdown all shared connections
	  without guids
	  (_dbus_connection_ref_unlocked): handle OOM when prepending no guid
	  connections to the shared_connections_no_guid list
	* Patch by  Kimmo Hämäläinen <kimmo dot hamalainen at nokia dot com>

2007-07-18  Havoc Pennington  <hp@redhat.com>

	* dbus/dbus-message.c (dbus_message_get_cached)
	(dbus_message_cache_or_finalize): don't mess with message from
	message cache outside of the cache lock. Bug #9164 from Jonathan
	Matthew.

2007-07-10  Havoc Pennington  <hp@redhat.com>

	* dbus/dbus-connection.c (struct DBusConnection): Fix from Olivier
	Hochreutiner to avoid trying to protect individual bits in a word
	with different locks (make dispatch_acquired and io_path_acquired
	dbus_bool_t rather than bitfields)

2007-06-08  Havoc Pennington  <hp@redhat.com>

	* backport fix to allow a server to use port=0 or omit port so 
	the port can be auto-selected by the OS

2007-05-23  Havoc Pennington  <hp@redhat.com>

	* bus/Makefile.am (install-data-hook): create session.d

	* bus/session.conf.in: add session.d for the session bus, so
	security policy can be extended

2007-04-27  Havoc Pennington  <hp@redhat.com>

	* dbus/dbus-sysdeps-unix.c (_dbus_open_socket): fix #10781 from
	Tobias Nygren, checking pointer to fd vs. 0 rather than checking
	the fd itself

2007-03-03  Thiago Macieira  <thiago@kde.org>

	* dbus/dbus-sysdeps-unix.c: capture the dbus-launch stderr
        output and add it to the DBusError message we return.

	* tools/dbus-launch.1:
	* tools/dbus-launch.c: Add option --close-stderr to, well,
	close stderr before starting dbus-daemon.

2007-01-31  Havoc Pennington  <hp@redhat.com>

	* bus/dbus-daemon.1.in: write a section in the man page on running